feat : [조웅현] 백엔드 패키지 및 클래스 추가

--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+# MariaDB configuration
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://3.36.55.195:3306/meet
+spring.datasource.username=root
+spring.datasource.password=ssafyb303
+
+# 서버 구동시 DB 테이블 생성할지 안할지
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# 서버 포트 설정
+server.port = 8000
+
+# 인코딩 설정
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+# HTTP Request, Response에 모두 인코딩 강제
+server.servlet.encoding.force=true
+
+# 서버 구동시 출력되는 로깅의 LEVEL 설정
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# devtools
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
 
