--- a/mokkozi/build.gradle
+++ b/mokkozi/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	// Swagger
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 test {
