--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -9,7 +9,24 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # 서버 포트 설정
-server.port = 8000
+#server.port = 8000
+server.port=8443
+server.http.port=8000
+server.ssl.enabled=true
+
+#The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+
+#The path to the keystore containing the certificate
+server.ssl.key-store-type=classpath:keystore/ssafy.p12
+#The password used to generate the certificate
+server.ssl.key-store-password=ssafyb303!
+#The alias mapped to the certificate
+server.ssl.key-alias=ssafy
+#truse store location
+trust.store=classpath:keystore/ssafy.p12
+#true store password
+trust.store.password=ssafyb303!
 
 # 인코딩 설정
 server.servlet.encoding.charset=UTF-8
