fix : [이광교] openvidu application.properties

--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.show-sql=true
 
 # 서버 포트 설정
 #server.port = 8000
+
+# OpenVidu 설정
 server.port=8443
 server.http.port=8000
 server.ssl.enabled=true
@@ -18,7 +20,7 @@ server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 
 #The path to the keystore containing the certificate
-server.ssl.key-store-type=classpath:keystore/ssafy.p12
+server.ssl.key-store=classpath:keystore/ssafy.p12
 #The password used to generate the certificate
 server.ssl.key-store-password=ssafyb303!
 #The alias mapped to the certificate
