feat : [이광교] openvidu

--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 
 # OpenVidu 설정
 server.port=8443
-server.http.port=8000
+server.https.port=8000
 server.ssl.enabled=true
 
 #The format used for the keystore. It could be set to JKS in case it is a JKS file
@@ -29,6 +29,8 @@ server.ssl.key-alias=ssafy
 trust.store=classpath:keystore/ssafy.p12
 #true store password
 trust.store.password=ssafyb303!
+server.address=localhost
+server.servlet.contextPath=/
 
 # 인코딩 설정
 server.servlet.encoding.charset=UTF-8
