#S05P31B303-178 feat : [조웅현] 회원가입 구현, S3 디펜던시 추가

--- a/mokkozi/build.gradle
+++ b/mokkozi/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
 	// Swagger
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	// AWS S3
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-aws', version: '2.2.1.RELEASE', ext: 'pom'
 }
 
 test {
