--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -41,6 +41,17 @@ logging.level.org.springframework=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.com.b303.mokkozi.springboot=DEBUG
 
+
+## AWS S3 관련 설정
+#cloud.aws.credentials.accessKey={YOUR_USER_ACCESSKEY}
+#cloud.aws.credentials.secretKey={YOUR_USER_SECRETKEY}
+cloud.aws.credentials.accessKey=AKIA4SYF6I6BRNWYWF52
+cloud.aws.credentials.secretKey=vfXOy2cUKWzm5TNcdbXysG/VanpYPfZPNburikOx
+cloud.aws.s3.bucket=mokkozi
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
+
+
 # devtools
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
