--- a/mokkozi/build.gradle
+++ b/mokkozi/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	// AWS S3
-	compile group: 'org.springframework.cloud', name: 'spring-cloud-aws', version: '2.2.1.RELEASE', ext: 'pom'
+	compileOnly group: 'org.springframework.cloud', name: 'spring-cloud-aws', version: '2.2.1.RELEASE', ext: 'pom'
 }
 
 test {
