--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -9,26 +9,27 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # 서버 포트 설정
-#server.port = 8000
+server.port = 8000
+server.servlet.contextPath=/
 
 # OpenVidu 설정
-server.port=8443
-server.http.port=8000
-server.ssl.enabled=true
-
-#The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
-
-#The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/ssafy.p12
-#The password used to generate the certificate
-server.ssl.key-store-password=ssafyb303!
-#The alias mapped to the certificate
-server.ssl.key-alias=ssafy
-#truse store location
-trust.store=classpath:keystore/ssafy.p12
-#true store password
-trust.store.password=ssafyb303!
+#server.port=8443
+#server.http.port=8000
+#server.ssl.enabled=true
+#
+##The format used for the keystore. It could be set to JKS in case it is a JKS file
+#server.ssl.key-store-type=PKCS12
+#
+##The path to the keystore containing the certificate
+#server.ssl.key-store=classpath:keystore/ssafy.p12
+##The password used to generate the certificate
+#server.ssl.key-store-password=ssafyb303!
+##The alias mapped to the certificate
+#server.ssl.key-alias=ssafy
+##truse store location
+#trust.store=classpath:keystore/ssafy.p12
+##true store password
+#trust.store.password=ssafyb303!
 
 # 인코딩 설정
 server.servlet.encoding.charset=UTF-8
@@ -40,6 +41,17 @@ server.servlet.encoding.force=true
 logging.level.org.springframework=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.com.b303.mokkozi.springboot=DEBUG
+
+
+## AWS S3 관련 설정
+#cloud.aws.credentials.accessKey={YOUR_USER_ACCESSKEY}
+#cloud.aws.credentials.secretKey={YOUR_USER_SECRETKEY}
+cloud.aws.credentials.accessKey=AKIA4SYF6I6BRNWYWF52
+cloud.aws.credentials.secretKey=vfXOy2cUKWzm5TNcdbXysG/VanpYPfZPNburikOx
+cloud.aws.s3.bucket=mokkozi
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
+
 
 # devtools
 spring.devtools.livereload.enabled=true
