--- a/mokkozi_fe/package.json
+++ b/mokkozi_fe/package.json
@@ -14,6 +14,7 @@
     "openvidu-browser": "^2.19.0",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
