#S05P31B303-197 feat : [조웅현] 개인 프로필 S3 업로드 구현

--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -52,6 +52,9 @@ cloud.aws.s3.bucket=mokkozi
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 
+# 파일 용량 설정
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
 
 # devtools
 spring.devtools.livereload.enabled=true
