--- a/mokkozi/build.gradle
+++ b/mokkozi/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
 	ext {
 		queryDslVersion = "4.4.0"
@@ -18,6 +17,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
+apply plugin: "io.spring.dependency-management"
 
 group = 'com.b303'
 version = '0.0.1-SNAPSHOT'
@@ -58,6 +58,8 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
 	// Swagger
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
@@ -70,13 +72,17 @@ dependencies {
 	implementation group: 'com.querydsl', name: 'querydsl-apt', version: queryDslVersion
 	implementation group: 'com.querydsl', name: 'querydsl-core', version: queryDslVersion
 
-	annotationProcessor group: 'com.querydsl', name: 'querydsl-apt', version: queryDslVersion
 	annotationProcessor group: 'com.querydsl', name: 'querydsl-apt', version: queryDslVersion, classifier: 'jpa'
+	annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 	annotationProcessor 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
 }
 
-clean {
-	delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
+/**
+ * 인텔리제이 Annotation processor 에 생성되는 'src/main/generated' 디렉터리 삭제
+ */
+task cleanGeneatedDir(type: Delete) { // 인텔리제이 annotation processor 가 생성한 Q클래스가 clean 태스크로 삭제되는 게 불편하다면 둘 중에 하나를 선택
+	delete file('src/main/generated')
 }
+
