--- a/mokkozi/build.gradle
+++ b/mokkozi/build.gradle
@@ -68,15 +68,25 @@ dependencies {
 
 
 // Querydsl
-	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: queryDslVersion
+//	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: queryDslVersion
 	implementation group: 'com.querydsl', name: 'querydsl-apt', version: queryDslVersion
 	implementation group: 'com.querydsl', name: 'querydsl-core', version: queryDslVersion
 
-	annotationProcessor group: 'com.querydsl', name: 'querydsl-apt', version: queryDslVersion, classifier: 'jpa'
-	annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+//	annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+	annotationProcessor("com.querydsl:querydsl-apt:${queryDslVersion}:jpa")
 	annotationProcessor 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
+}
+
+// QueryDSL
+sourceSets {
+	main {
+		java {
+			srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+		}
+	}
 }
 
 /**
