--- a/mokkozi/build.gradle
+++ b/mokkozi/build.gradle
@@ -75,6 +75,8 @@ dependencies {
 	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
 	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 	annotationProcessor("com.querydsl:querydsl-apt:${queryDslVersion}:jpa")
+
+//	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
 }
 
 
