feat : [조웅현] devtools 설정

--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -60,6 +60,14 @@ spring.servlet.multipart.maxRequestSize=10MB
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
+# 자동재시작 사용여부
+spring.devtools.restart.enabled=true
+
+# classpath 감지 주기 설정(선택사항)
+# poll-interval 값은 항상 quiet-period 보다 커야한다.
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
+
 # JWT 관련 설정을 추가한다.
 # HS512 알고리즘을 사용하여 header, payload, Signature를 암호화한다. 이 때 HS512 알고리즘은 64 byte 이상의 암호화 키를 사용해야 한다.
 # 아래의 secret 값은 특정문자열을 Base64로 인코딩한 값을 사용했다.
