--- a/mokkozi_fe/package.json
+++ b/mokkozi_fe/package.json
@@ -12,15 +12,13 @@
     "core-js": "^3.6.5",
     "face-api.js": "^0.22.2",
     "openvidu-browser": "^2.19.0",
-    "sockjs-client": "^1.5.2",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^4.1.0",
-    "webstomp-client": "^1.2.6"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
