--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -14,17 +14,17 @@ server.servlet.contextPath=/
 
 # https 설정
 server.port=8000
-server.http.port=8080
-server.ssl.enabled=true
+#server.http.port=8080
+#server.ssl.enabled=true
 #
 ##The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 ##The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/ssafy-keystore.p12
+#server.ssl.key-store=classpath:keystore/ssafy-keystore.p12
 ##The password used to generate the certificate
-server.ssl.key-store-password=ssafyb303!@#
+#server.ssl.key-store-password=ssafyb303!@#
 ##The alias mapped to the certificate
-server.ssl.key-alias=ssafy-keystore
+#server.ssl.key-alias=ssafy-keystore
 ###truse store location
 #trust.store=classpath:keystore/ssafy.p12
 ###true store password
