fix : [조웅현] 버킷 교체

--- a/mokkozi/src/main/resources/application.properties
+++ b/mokkozi/src/main/resources/application.properties
@@ -45,11 +45,20 @@ logging.level.com.b303.mokkozi.springboot=DEBUG
 ## AWS S3 관련 설정
 #cloud.aws.credentials.accessKey={YOUR_USER_ACCESSKEY}
 #cloud.aws.credentials.secretKey={YOUR_USER_SECRETKEY}
-cloud.aws.credentials.accessKey=AKIA4SYF6I6BTLETDV6X
-cloud.aws.credentials.secretKey=yq7akc9WshER5RP2lIJTULMR8zKISAFDfeLPVkyw
-cloud.aws.s3.bucket=mokkozi
+#cloud.aws.credentials.accessKey=AKIA4SYF6I6BTLETDV6X
+#cloud.aws.credentials.secretKey=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
+#cloud.aws.s3.bucket=mokkozi
+#cloud.aws.region.static=ap-northeast-2
+#cloud.aws.stack.auto=false
+
+# AWS S3 2번째 버킷
+cloud.aws.credentials.accessKey=AKIA4SYF6I6B3HWZJXCZ
+cloud.aws.credentials.secretKey=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
+cloud.aws.s3.bucket=mokkozi-s3
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
+
+
 
 # 파일 용량 설정
 spring.servlet.multipart.maxFileSize=10MB
